# greenplum-sql-literal-analyzer

./: .env.example  .gitignore  BENCHMARK_SOURCES.md  README.md  pyproject.toml
artifacts/benchmark/: tpcds-full.json
artifacts/example-report/: details.jsonl  metrics.json  summary.jsonl
artifacts/notebook-demo/: aggregate.jsonl  catalog-columns.jsonl  catalog-stats.json  details.jsonl  row_analysis.jsonl  schema.json
docs/superpowers/plans/: 2026-07-21-catalog-statistics.md  2026-07-21-dataframe-notebook.md  2026-07-21-greenplum-notebook-input.md  2026-07-21-greenplum-sql-literal-analyzer.md  2026-07-21-tpcds-html-report.md
docs/superpowers/specs/: 2026-07-21-catalog-statistics-design.md  (+3 more)
examples/: tpcds_input.jsonl  tpcds_schema.json
notebooks/: sql_catalog_from_dataframe.ipynb
scripts/: embed_notebook_analyzer.py  fetch_benchmarks.py
sql/: aggregate_usage.sql  create_output_tables.sql
src/gp_sql_analyzer/: __init__.py  aggregate.py  analyzer.py  benchmarks.py  catalog_html.py  catalog_stats.py  cli.py  complexity.py  dataframe.py  ddl_schema.py  greenplum.py  html_report.py  io.py  lineage.py  models.py  patterns.py  placeholders.py  schema.py
tests/: test_aggregate.py  test_analyzer.py  test_benchmarks.py  test_catalog_html.py  test_catalog_stats.py  test_cli.py  test_complexity.py  test_dataframe.py  test_embedded_notebook.py  test_greenplum.py  test_html_report.py  test_io.py  test_lineage.py  test_literal_usage.py  test_models.py  test_notebook.py  test_patterns.py  test_placeholders.py  test_schema.py  tpcds.py
