[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-sql-analyzer"
version = "0.1.0"
description = "AST-based analysis of Greenplum query literal templates"
requires-python = ">=3.11"
dependencies = ["certifi>=2024", "sqlglot>=25.34,<26"]

[project.optional-dependencies]
greenplum = ["psycopg2-binary>=2.9,<3"]
notebook = [
  "pandas>=2,<3",
  "jupyterlab>=4,<5",
  "nbformat>=5,<6",
  "nbclient>=0.10,<1",
]

[project.scripts]
gp-sql-analyzer = "gp_sql_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
